--- a/index.html
+++ b/index.html
@@ -8,11 +8,27 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
-    <title>Hello, world!</title>
+    <title>Preact Template</title>
   </head>
   <body>
     
     <div id="app" style="font-family: 'Inter', sans-serif;"></div>
-    <script src="index.js" type="module" defer></script>
+    <script type="module">
+    	import { h, Component, render } from 'https://unpkg.com/preact?module';
+      import htm from 'https://unpkg.com/htm?module';
+
+      const html = htm.bind(h);
+
+  		function App() {
+
+  			return html`
+  				<div>
+            This is preact
+          </div>
+  			`;
+  		}
+
+		render(html`<${App} />`, document.body);
+	</script>
   </body>
 </html>
