--- a/React/index.html
+++ b/React/index.html
@@ -5,17 +5,16 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>React Local</title>
+  <title>React App</title>
   <script src="https://unpkg.com/react/umd/react.development.js"></script>
   <script src="https://unpkg.com/react-dom/umd/react-dom.development.js"></script>
-  <script src="https://unpkg.com/babel-standalone@6.26.0/babel.js"></script>
+  <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
 </head>
 <body>
   <div id="root"></div>
 
 <script type="text/babel">
-    const rootElement = document.getElementById('root');
-
+    
     function App() {
       const [count, setCount] = React.useState(0);
 
@@ -34,7 +33,7 @@
 
     ReactDOM.render(
       root,
-      rootElement
+      document.getElementById('root')
     );
 </script>
 
