--- a/React/index.html
+++ b/React/index.html
@@ -1,42 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>React App</title>
+    <script src="https://unpkg.com/react/umd/react.development.js"></script>
+    <script src="https://unpkg.com/react-dom/umd/react-dom.development.js"></script>
+    <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>React App</title>
-  <script src="https://unpkg.com/react/umd/react.development.js"></script>
-  <script src="https://unpkg.com/react-dom/umd/react-dom.development.js"></script>
-  <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
-</head>
-<body>
-  <div id="root"></div>
+  <body>
+    <div id="root"></div>
 
-<script type="text/babel">
-    
-    function App() {
-      const [count, setCount] = React.useState(0);
+    <script type="text/babel">
+        
+        function App() {
+          const [count, setCount] = React.useState(0);
 
-      return (
-        <div>
-          This is react without npm!
-          <div>
-            <p>{count}</p>
-            <button onClick={() => setCount(count + 1)}>Increment</button>
-          </div>
-        </div>
-      );
-    }
+          return (
+            <div>
+              This is react without npm!
+              <div>
+                <p>{count}</p>
+                <button onClick={() => setCount(count + 1)}>Increment</button>
+              </div>
+            </div>
+          );
+        }
 
-    const root = <App/>;
+        function Foo() {
+          return (
+            <div>This is Foo</div>
+          );
+        }
 
-    ReactDOM.render(
-      root,
-      document.getElementById('root')
-    );
-</script>
+        const root = <div><App/><Foo /></div>;
 
-</body>
-
+        ReactDOM.render(
+          root,
+          document.getElementById('root')
+        );
+    </script>
+  </body>
 </html>
