--- a/Preact/index.html
+++ b/Preact/index.html
@@ -11,38 +11,7 @@
     <title>Preact Template</title>
   </head>
   <body>
-    
     <div id="app" style="font-family: 'Inter', sans-serif;"></div>
-    <script type="module">
-    	import { html, render, useState } from '//unpkg.com/htm/preact/standalone.mjs';
-      import Bar, { shit, TestState } from './src/Bar.js';
-
-  		function App() {
-  			return html`
-  				<div>
-            This is preact ${shit}
-          </div>
-  			`;
-  		}
-
-      function Foo() {
-        return html`
-          <div>This is Foo</div>
-        `
-      }
-
-      function All() {
-        return html`
-          <div>
-            <${App} />
-            <${Foo} />
-            <${Bar} />
-            <${TestState} />
-          </div>
-        `
-      }
-
-		render(html`<${All} />`, document.querySelector('#app'));
-	</script>
+    <script type="module" src="./index.js"></script>
   </body>
 </html>
